terraform/secure/network.tf
resource "azurerm_virtual_network" "secure1-vnet" {
  name                = "vault-vnet"
  address_space       = ["10.0.0.0/16", "fd00:10:0::/48"]
  location            = azurerm_resource_group.secure1-rg-nz.location
  resource_group_name = azurerm_resource_group.secure1-rg-nz.name
}
resource "azurerm_subnet" "secure1-subnet" {
  name                 = "internal"
  resource_group_name  = azurerm_resource_group.secure1-rg-nz.name
  virtual_network_name = azurerm_virtual_network.secure1-vnet.name
  address_prefixes     = ["10.0.2.0/24", "fd00:10:0:2::/64"]
}
resource "azurerm_network_interface" "secure1-nic" {
  name                = "secure1-nic"
  location            = azurerm_resource_group.secure1-rg-nz.location
  resource_group_name = azurerm_resource_group.secure1-rg-nz.name

  ip_configuration {
    name                          = "secure1-vm-ipv6"
    subnet_id                     = azurerm_subnet.secure1-subnet.id
    private_ip_address_allocation = "Dynamic"
    private_ip_address_version = "IPv6"
    public_ip_address_id = azurerm_public_ip.secure1-pip.id
  }
  ip_configuration {
    name = "secure1-vm-ipv4"
    primary = true
    subnet_id = azurerm_subnet.secure1-subnet.id
    private_ip_address_allocation = "Dynamic"
    private_ip_address_version = "IPv4"
  }
}
resource "azurerm_network_interface_security_group_association" "secure1-nic-nsg" {
  network_interface_id      = azurerm_network_interface.secure1-nic.id
  network_security_group_id = azurerm_network_security_group.secure1_nsg.id
}
resource "azurerm_network_security_group" "secure1_nsg" {
  name                = "secure1-nsg"
  location            = azurerm_resource_group.secure1-rg-nz.location
  resource_group_name = azurerm_resource_group.secure1-rg-nz.name

  security_rule {
    name                       = "SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "HTTPS"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "HTTPS-QUIC"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Udp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "HTTP"
    priority                   = 130
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
resource "azurerm_public_ip" "secure1-pip" {
  ip_version = "IPv6"
  name = "secure1-pip"
  location = azurerm_resource_group.secure1-rg-nz.location
  resource_group_name = azurerm_resource_group.secure1-rg-nz.name
  allocation_method = "Static"
}

resource "cloudflare_dns_record" "example_dns_record" {
  zone_id = data.sops_file.cloudflare.data["zone_id"]
  name = data.sops_file.cloudflare.data["vault_domain"]
  ttl = 3600
  type = "AAAA"
  comment = "Vault Host (Autogenerated by Terraform)"
  content = tostring(azurerm_public_ip.secure1-pip.ip_address)
}
